# BKI

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release-desktop.yml
docs/: ADDON_GUIDE.md  RELEASE.md
locales/: af.json  en.json  fr.json  ja.json
python/: main.py  requirements.txt  sample-request.json
python/modules/: __init__.py  collocation.py  common.py  cooccurrence.py  credits.py  dependency.py  export.py  frequency.py  ingest.py  keyness.py  kwic.py  lang_loader.py  lexical_stats.py  ner.py  persistence.py  pos.py  preprocess.py  sentiment.py  similarity.py  tfidf.py  topic_model.py
scripts/: generate-icons.mjs
src/: App.tsx  i18n.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  schema.sql  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/AboutModal/: index.tsx
src/components/CorpusPanel/: index.tsx
src/components/ExportTab/: index.tsx
src/components/GuideModal/: index.tsx
src/components/PersistenceBridge/: index.tsx
src/components/PreprocessTab/: index.tsx
src/components/ProcessInspector/: index.tsx
src/components/QdaTab/: index.tsx
src/components/QuantTab/: NlpPanel.tsx  RStatsPanel.tsx  TextMiningPanel.tsx  index.tsx
src/lib/: analysisConfigs.ts  bkiProject.ts  ingest.ts  languageAddons.ts  persistence.ts  preprocess.ts
src/store/: analysisStore.ts  codingStore.ts  corpusStore.ts  processStore.ts
src/types/: index.ts
