[package]
name = "bki"
version = "0.1.0"
description = "Bibliometric & Keyword Intelligence"
authors = ["BKI Contributors"]
license = "MIT"
repository = "https://github.com/toutoutoubun/BKI"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
directories = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
